# napf

./: .buildinfo  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  api_reference.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  python_api.html  search.html  searchindex.js  setup.py
.doctrees/: api_reference.doctree  environment.pickle  index.doctree  python_api.doctree
.doctrees/_autosummary/: napf.base.KDT.core_tree.doctree  napf.base.KDT.doctree  napf.base.KDT.dtype.doctree  napf.base.KDT.knn_search.doctree  napf.base.KDT.newtree.doctree  napf.base.KDT.nthread.doctree  napf.base.KDT.query.doctree  napf.base.KDT.query_ball_point.doctree  napf.base.KDT.radii_search.doctree  napf.base.KDT.radius_search.doctree  napf.base.KDT.rknn_search.doctree  napf.base.KDT.tree_data.doctree  napf.base.KDT.unique_data_and_inverse.doctree  napf.base.core_class_str_and_data.doctree  napf.base.doctree  napf.base.enforce_contiguous.doctree  napf.base.validate_metric_input.doctree  napf.doctree
.github/workflows/: build_and_test.yml  build_and_upload_wheels.yml  docs.yml  main.yml  python-publish.yml  upload_wheels.yml
_autosummary/: napf.base.KDT.core_tree.html  napf.base.KDT.dtype.html  napf.base.KDT.html  napf.base.KDT.knn_search.html  napf.base.KDT.newtree.html  napf.base.KDT.nthread.html  napf.base.KDT.query.html  napf.base.KDT.query_ball_point.html  napf.base.KDT.radii_search.html  napf.base.KDT.radius_search.html  napf.base.KDT.rknn_search.html  napf.base.KDT.tree_data.html  napf.base.KDT.unique_data_and_inverse.html  napf.base.core_class_str_and_data.html  napf.base.enforce_contiguous.html  napf.base.html  napf.base.validate_metric_input.html  napf.html
_modules/: index.html
_modules/napf/: base.html
_sources/: api_reference.rst.txt  index.rst.txt  python_api.rst.txt
_sources/_autosummary/: napf.base.KDT.core_tree.rst.txt  napf.base.KDT.dtype.rst.txt  napf.base.KDT.knn_search.rst.txt  napf.base.KDT.newtree.rst.txt  napf.base.KDT.nthread.rst.txt  napf.base.KDT.query.rst.txt  napf.base.KDT.query_ball_point.rst.txt  napf.base.KDT.radii_search.rst.txt  napf.base.KDT.radius_search.rst.txt  napf.base.KDT.rknn_search.rst.txt  napf.base.KDT.rst.txt  napf.base.KDT.tree_data.rst.txt  napf.base.KDT.unique_data_and_inverse.rst.txt  napf.base.core_class_str_and_data.rst.txt  napf.base.enforce_contiguous.rst.txt  napf.base.rst.txt  napf.base.validate_metric_input.rst.txt  napf.rst.txt
docs/source/: conf.py
examples/: 3dtree.py
napf/: __init__.py  base.py
src/: napf.hpp
src/python/: CMakeLists.txt  napf.cpp  pykdt.hpp  threadhelper.hpp
src/python/classes/: double_trees.cpp  float_trees.cpp  int_trees.cpp  long_trees.cpp  radius_search_result_vectors.cpp
tests/: test_init.py  test_init_and_query.py
