[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11",
]

build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
test-command = "python {project}/tests/test_init_and_query.py"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
test-skip = ["*arm64"]

[tool.cibuildwheel.windows]
skip = "pp*"
