[build-system]
requires = [
    "scikit-build-core",
    "pybind11>=2.12",
]
build-backend = "scikit_build_core.build"

[project]
name = "napf"
authors = [
    {name="Jaewook Lee", email="jaewooklee042@gmail.com"}
]
license = {file = "LICENSE"}
description = "nanoflann python bindings for kdtree with multithreaded queries"
urls = {Homepage = "https://github.com/tataratat/napf"}
classifiers=[
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
]
dependencies = ["numpy"]
dynamic = ["version"]
requires-python = ">=3.7"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "napf/_version.py"

[tool.cibuildwheel]
test-command = "python {project}/tests/test_init_and_query.py"


[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.cibuildwheel.windows]
skip = "pp*"

[tool.black]
line-length = 79
exclude = "third_party"

[tool.blackdoc]
line-length = 75
